--- a/ui/src/main/java/fxmls/MainStage.fxml
+++ b/ui/src/main/java/fxmls/MainStage.fxml
@@ -1,27 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.control.ToggleSwitch?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+
+<Pane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="415.0">
+      <HBox>
          <children>
-            <ScrollPane prefHeight="400.0" prefWidth="415.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="413.0">
+            <Slider fx:id="speed" orientation="VERTICAL" showTickMarks="true" value="50.0" />
+            <VBox>
+               <children>
+                  <Slider fx:id="steer" showTickMarks="true" value="50.0" />
+                  <GridPane prefHeight="300.0" prefWidth="300.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
                      <children>
-                        <TextArea prefHeight="400.0" prefWidth="415.0" />
+                        <Button fx:id="accelerate" mnemonicParsing="false" prefHeight="9999.0" prefWidth="9999.0" text="Accelerate" GridPane.columnIndex="1" />
+                        <Button fx:id="left" mnemonicParsing="false" prefHeight="9999.0" prefWidth="9999.0" text="Left" GridPane.rowIndex="1" />
+                        <Button fx:id="right" mnemonicParsing="false" prefHeight="9999.0" prefWidth="9999.0" text="Right" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <Button fx:id="brake" mnemonicParsing="false" prefHeight="9999.0" prefWidth="9999.0" text="Brake" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
-                  </AnchorPane>
-              </content>
-            </ScrollPane>
+                  </GridPane>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <ToggleSwitch fx:id="platooning" nodeOrientation="LEFT_TO_RIGHT" text="Platooning" />
+                  <ToggleSwitch fx:id="acc" nodeOrientation="LEFT_TO_RIGHT" text="ACC" />
+                  <ToggleSwitch fx:id="alc" nodeOrientation="LEFT_TO_RIGHT" text="ALC" />
+                  <ToggleSwitch fx:id="connection" text="Connection" />
+               </children>
+            </VBox>
          </children>
-      </AnchorPane>
-      <AnchorPane layoutX="415.0" prefHeight="400.0" prefWidth="185.0">
-         <children>
-            <Button fx:id="connectButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#connectButtonActionPerformed" text="Connect to MOPED" />
-         </children>
-      </AnchorPane>
+      </HBox>
    </children>
-</AnchorPane>
+</Pane>
