--- a/ui/src/se/byggarebob/platooning/ui/fxmls/MainStage.fxml
+++ b/ui/src/se/byggarebob/platooning/ui/fxmls/MainStage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.controlsfx.control.ToggleSwitch?>
 
-<Pane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<Pane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="se.byggarebob.platooning.ui.controllers.MainController">
    <children>
       <HBox>
          <children>
